# ForgeFlow

./: .gitignore  LICENSE  README.md  SETUP.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run.sh
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  cad.py  dashboard.py  imports.py  intake.py  listings.py  products.py  simulation.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  cad_model.py  import_record.py  intake.py  listing.py  manufacturing_simulation.py  opportunity_score.py  product.py  product_note.py  research_data.py
backend/app/prompts/: __init__.py  brief_assembly.py  prompt_regeneration.py  text_extraction.py  vision_analysis.py
backend/app/schemas/: __init__.py  brief.py  cad.py  dashboard.py  import_schema.py  intake.py  listing_schema.py  opportunity_score.py  product.py  research_data.py  simulation.py
backend/app/services/: brief_assembler.py  brief_validator.py  cad_service.py  import_service.py  intake_enricher.py  intake_scraper.py  listing_service.py  scoring_service.py  simulation_service.py
backend/migrations/: env.py
backend/migrations/versions/: a873c2277507_add_intake_tables.py
backend/seeds/: product_briefs.json  seed_data.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/components/: EmptyState.tsx  ErrorBanner.tsx  LoadingSpinner.tsx
frontend/src/contexts/: ToastContext.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: CadGenerator.tsx  Dashboard.tsx  (+9 more)
(+2 files in other folders)
